...
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YEG-ZU-6Jl">
                                <rect key="frame" x="0.0" y="44" width="414" height="60"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TLV-z3-ejP">
                                        <rect key="frame" x="20" y="30" width="0.0" height="0.0"/>
                                        <accessibility key="accessibilityConfiguration" identifier="TimerLabel"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BtO-Fj-V8e">
                                        <rect key="frame" x="394" y="30" width="0.0" height="0.0"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ScoreLabel"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
                                            <subviews>
                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y8n-3a-tFv">
                                                    <rect key="frame" x="0.0" y="0.0" width="148" height="177"/>
                                                    <subviews>
                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sgu-8d-vj2">
                                                            <rect key="frame" x="0.0" y="0.0" width="148" height="177"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="FrontImageView">
                                                                <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
                                                                <bool key="isElement" value="YES"/>
                                                            </accessibility>
                                                        </imageView>
                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lh4-dP-TKn">
                                                            <rect key="frame" x="0.0" y="0.0" width="148" height="177"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="BackImageView">
                                                                <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
                                                                <bool key="isElement" value="YES"/>
                                                            </accessibility>
                                                        </imageView>
                                                    </subviews>
                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
                                    <outlet property="dataSource" destination="gal-bf-ZFa" id="eAt-2m-ude"/>
                                    <outlet property="delegate" destination="gal-bf-ZFa" id="11C-pf-knC"/>
                                </connections>
                            </collectionView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rJN-0J-ngf">
                                <rect key="frame" x="160" y="832" width="94" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="RestartGame"/>
                                <state key="normal" title="Restart Game"/>
                                <connections>
                                    <action selector="restartButtonActionWithSender:" destination="gal-bf-ZFa" eventType="touchUpInside" id="0mk-J6-H7a"/>
                                </connections>
                            </button>
                        </subviews>
...
