...
        return "You scored \(score) points \n Remaining time : \(remainingTime)"
      }
    }

    var okButtonTitle: String {
      switch self {
      case .startGame: return "Start Game"
      case .timeOver, .gameWon: return "Start new game"
      }
    }
  }

  // show alert
...
    switch type {
    case .startGame(let defaultTime):
      alertController.addTextField { textField in
        textField.text = "\(defaultTime)"
        textField.keyboardType = .numberPad
        textField.addDoneButtonOnKeyboard()
        textField.accessibilityIdentifier = "DefaultTimeTextField"
      }
    default: break
    }

    let okAction = UIAlertAction(title: type.okButtonTitle, style: .destructive) { (_) in
      if alertController.textFields?.count ?? 0 > 0 {
...
